# VkEngine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  compile.py  vcpkg.json
.github/workflows/: cmake-single-platform.yml
shaders/: simple.frag  simple.frag.spv  simple.vert  simple.vert.spv
src/: CMakeLists.txt  app.cpp  app.hpp  main.cpp  vkEngineDevice.cpp  vkEngineDevice.hpp  vkEngineModel.cpp  vkEngineModel.hpp  vkEnginePipeline.cpp  vkEnginePipeline.hpp  vkEngineSwapChain.cpp  vkEngineSwapChain.hpp  vkEngineWindow.cpp  vkEngineWindow.hpp  vkWindow.cpp  vkWindow.hpp
src/core/: CMakeLists.txt  app.cpp  app.hpp  engine_buffer.cpp  engine_buffer.hpp  engine_controller.cpp  engine_controller.hpp  engine_device.cpp  engine_device.hpp  engine_ecs.cpp  engine_ecs.hpp  engine_model.cpp  engine_model.hpp  engine_pipeline.cpp  engine_pipeline.hpp  engine_render_system.cpp  engine_render_system.hpp  engine_renderer.cpp  engine_renderer.hpp  engine_swapchain.cpp  engine_swapchain.hpp  engine_window.cpp  engine_window.hpp  main.cpp  vkEngineDevice.cpp  vkEngineDevice.hpp  vkEngineModel.cpp  vkEngineModel.hpp  vkEnginePipeline.cpp  vkEnginePipeline.hpp  vkEngineSwapChain.cpp  vkEngineSwapChain.hpp  vkEngineWindow.cpp  vkEngineWindow.hpp
src/renderer/: app.cpp  app.hpp  engine_camera.cpp  engine_camera.hpp  engine_render_system.cpp  engine_render_system.hpp  engine_renderer.cpp  engine_renderer.hpp
src/utils/: CMakeLists.txt  bufferUtils.cpp  bufferUtils.hpp  buffer_utils.cpp  buffer_utils.hpp  hash.hpp  logger.hpp  memory.cpp  memory.hpp  pch.hpp  types.hpp  utility.hpp
utils/: MemoryManagment.hpp  vector.cpp  vector.hpp
